--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">APPSIoT-Lab2</string>
+    <string-array name="marcas">
+        <item>MSI</item>
+        <item>Asus</item>
+        <item>Lenovo</item>
+        <item>HP</item>
+        <item>Dell</item>
+        <item>Onn</item>
+        <item>Apple</item>
+        <item>Acer</item>
+        <item>Samsung</item>
+    </string-array>
 </resources>
