--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,26 @@
         <item>Acer</item>
         <item>Samsung</item>
     </string-array>
+    <string-array name="idiomas">
+        <item>Inglés</item>
+        <item>Español</item>
+        <item>Árabe</item>
+        <item>Japonés</item>
+        <item>Chino</item>
+        <item>Portugués</item>
+        <item>Tailandés</item>
+        <item>Ruso</item>
+        <item>Alemán</item>
+    </string-array>
+    <string-array name="pulgadasMonitor">
+        <item>19\'\'</item>
+        <item>21\'\'</item>
+        <item>22\'\'</item>
+        <item>24\'\'</item>
+        <item>27\'\'</item>
+        <item>32\'\'</item>
+        <item>40\'\'</item>
+        <item>42\'\'</item>
+        <item>50\'\'</item>
+    </string-array>
 </resources>
