Hints computadora + bug fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">APPSIoT-Lab2</string>
     <string-array name="marcas">
+        <item>Seleccione Marca</item>
         <item>MSI</item>
         <item>Asus</item>
         <item>Lenovo</item>
