--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item>Alemán</item>
     </string-array>
     <string-array name="pulgadasMonitor">
+        <item>Seleccione Pulgadas</item>
         <item>19\'\'</item>
         <item>21\'\'</item>
         <item>22\'\'</item>
