--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>Samsung</item>
     </string-array>
     <string-array name="idiomas">
+        <item>Seleccione Idioma</item>
         <item>Inglés</item>
         <item>Español</item>
         <item>Árabe</item>
